<resources>
    <string name="app_name">Women Home Workout</string>

    <string name="privacy_policy_link">https://womenhomeworkout1.blogspot.com/2023/02/privacy-policy-women-home-workout.html</string>

    <string name="contact_us">rbs01569@gmail.com</string>

    <string name="btn_ok">OK</string>
    <string name="btn_set">Set</string>
    <string name="btn_save">Save</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_skip">Skip</string>
    <string name="btn_next">Next</string>
    <string name="btn_quit">Quit</string>
    <string name="btn_show">Show</string>
    <string name="btn_hide">Hide</string>
    <string name="btn_share">Share</string>
    <string name="btn_start">Start</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_reset">Reset</string>
    <string name="btn_replace">Replace</string>
    <string name="btn_continue">Continue</string>
    <string name="btn_feedback">Feedback</string>
    <string name="btn_do_it_again">Do It Again</string>

    <string name="lbl_lb">LB</string>
    <string name="lbl_kg">KG</string>
    <string name="lbl_cm">CM</string>
    <string name="lbl_in">IN</string>
    <string name="lbl_weight">Weight</string>
    <string name="lbl_height">Height</string>
    <string name="lbl_kcal">kcal</string>
    <string name="lbl_feet">Feet</string>
    <string name="lbl_inch">Inch</string>
    <string name="lbl_duration">Duration</string>
    <string name="lbl_exercise">Exercise</string>
    <string name="lbl_easy">Easy</string>
    <string name="lbl_i_feel">I feel</string>
    <string name="lbl_exhausted">Exhausted</string>
    <string name="lbl_date">Date</string>
    <string name="lbl_date_time">Date Time</string>
    <string name="lbl_more">More</string>
    <string name="lbl_records">Records</string>
    <string name="lbl_current">Current:</string>
    <string name="lbl_heaviest">Heaviest:</string>
    <string name="lbl_lightest">Lightest:</string>
    <string name="lbl_title">Title</string>
    <string name="lbl_minutes">Minutes</string>
    <string name="lbl_edit_plan">Edit plan</string>
    <string name="lbl_reset_plan">Reset plan</string>
    <string name="lbl_total">Total</string>
    <string name="lbl_units">Units</string>
    <string name="lbl_kg_cm">Kg, Cm</string>
    <string name="lbl_lb_ft">Lb, Ft</string>
    <string name="lbl_year_of_birth">Year of Birth</string>
    <string name="lbl_butt">Butt</string>
    <string name="lbl_abs">Abs</string>
    <string name="lbl_thigh">Thigh</string>
    <string name="lbl_rest_sec">Rest 30 Sec</string>
    <string name="lbl_next_exercise">Next Exercise</string>
    <string name="lbl_rest">Rest </string>
    <string name="lbl_sec"> Sec</string>


    <string name="x">x</string>
    <string name="s">s</string>


    <string name="demo_time">11/11</string>
    <string name="step_demo_text">1 / 11</string>
    <string name="demo_text">Demo Text</string>
    <string name="demo_count">15</string>
    <string name="demo_time_clock">00:11</string>
    <string name="demo_week_day">week 1 - Day 1</string>
    <string name="demo_week_goal_day">1/7</string>
    <string name="demo_float_clount">0.0</string>
    <string name="demo_name_with_day_name">Name With day name</string>
    <string name="demo_kcal">111.1 kcal</string>
    <string name="demo_kg">0.0kg</string>
    <string name="demo_ft_in">5 FT 0.0 IN</string>


    <string name="sound_options">Sound options</string>
    <string name="mute">Mute</string>
    <string name="voice_guide_txt">Voice Guide</string>
    <string name="coach_tips_txt">Coach tips</string>


    <string name="select_your_weight_unit">Select your weight unit</string>
    <string name="select_your_height_unit">Select your height unit</string>


    <!-- Settings -->
    <string name="settings">Settings</string>
    <string name="remove_ads">Remove Ads</string>
    <string name="upgrade_remove_ads">Upgrade to remove ads</string>
    <string name="rest_set">Rest set</string>
    <string name="countdown_time">Countdown Time</string>
    <string name="workout">Workout</string>
    <string name="workouts">Workouts</string>
    <string name="voice_options_tts">Voice Options (TTS)</string>
    <string name="test_voice">Test Voice</string>
    <string name="select_tts_engine">Select TTS Engine</string>
    <string name="google_text_to_speech_engine">Google Text-to-speech Engine</string>
    <string name="download_tts_engine">Download TTS Engine</string>
    <string name="voice_language">Voice Language</string>
    <string name="download_more_tts_language_data">Download more TTS Language data</string>
    <string name="device_tts_setting">Device TTS Setting</string>
    <string name="health_data">Health data</string>
    <string name="my_profile">My profile</string>
    <string name="remind_me_to_workout_every_day">Remind me to workout every day</string>
    <string name="metric_imperial_units"><![CDATA[Metric & Imperial Units]]></string>
    <string name="keep_the_screen_on">Keep the Screen On</string>
    <string name="general_settings">General Settings</string>
    <string name="community">Community</string>
    <string name="share_with_friends">Share with Friends</string>
    <string name="support_us">Support Us</string>
    <string name="rate_us">Rate Us</string>
    <string name="feed_back">Feedback</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="restart_progress">Restart progress</string>
    <string name="btn_download_tts_engine">Download TTS Engine</string>
    <string name="btn_select_tts_engine">Select TTS Engine</string>


    <string name="lbl_first_day_of_week">First Day Of week</string>
    <string name="set_your_weekly_goal">Set your weekly goal</string>
    <string name="weekly_training_days_title">Weekly training days</string>
    <string name="dl_come_back_in_30_minutes">Come back in 30 minutes</string>
    <string name="did_you_hear_test_voice">Did you hear the test voice?</string>
    <string name="please_choose_guide_voice_engine">Please choose guide voice engine:</string>
    <string name="dl_exercise_quite_title">Don`t quite! Feeling tired means it`s working!</string>
    <string name="dl_test_voice_no_msg_test">The TTS engine you are using is not working now, please double check it, switch to another TTS engine, or download TTS voice language.</string>

    <string name="male">Male</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="date_of_birth">Date Of Birth</string>

    <string name="_7x4_challenge">7x4 Challenge</string>

    <string name="title_library">Library</string>
    <string name="week_goal">Week Goal</string>
    <string name="week">Week</string>
    <string name="report">Report</string>
    <string name="history">History</string>
    <string name="update">Update</string>
    <string name="update_msg">An New Version of APP is Available</string>
    <string name="critical_update_msg">An critical update is required</string>
    <string name="btn_update">Update</string>

    <string name="we_recommend_training_at_least_3_days_weekly_for_a_better_result">We recommend training at least 3 days weekly for a better result.</string>

    <string name="tv_level_title">Level</string>
    <string name="ready_to_go">Ready To Go</string>
    <string name="tv_workout_title">Workout</string>
    <string name="error_video_not_exist">Video can`t exist!</string>

    <string name="complete_lvl_done_msg">Nice you\'ve done it!</string>
    <string name="bmi_title">BMI(kg/m\u00B2)</string>

    <!-- Alarm and hint -->
    <string name="hint_monday">Monday</string>
    <string name="hint_tuesday">Tuesday</string>
    <string name="hint_wednesday">Wednesday</string>
    <string name="hint_thursday">Thursday</string>
    <string name="hint_friday">Friday</string>
    <string name="hint_saturday">Saturday</string>
    <string name="hint_sunday">Sunday</string>


</resources>
