<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/_16dp">

    <TextView
        android:id="@+id/tvMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8dp"
        android:layout_marginEnd="@dimen/_8dp"
        android:layout_marginTop="@dimen/_8dp"
        android:text="@string/dl_test_voice_no_msg_test"
        android:textSize="@dimen/_18sp" />

    <Button
        android:id="@+id/btnDownloadTTSEngine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_16dp"
        android:background="@android:color/transparent"
        android:text="@string/btn_download_tts_engine" />

    <Button
        android:id="@+id/btnSelectTTSEngine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_8dp"
        android:background="@android:color/transparent"
        android:text="@string/btn_select_tts_engine" />

</LinearLayout>
