<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".activity.SetupPlanActivity">

    <ImageView
        android:id="@+id/ivBackGround"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/demo_text"
        android:src="@drawable/ic_trouble_zone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatRadioButton
        android:id="@+id/rbAbs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="188dp"
        android:background="@drawable/round_border_theme"
        android:checked="true"
        android:text="@string/lbl_abs"
        android:textColor="@color/green_theme"
        android:textSize="@dimen/_16sp"
        android:textStyle="bold"
        android:layout_marginEnd="4dp"
        app:layout_constraintEnd_toEndOf="@+id/ivBackGround"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/ivBackGround"
        app:layout_constraintTop_toTopOf="@+id/ivBackGround" />

    <androidx.appcompat.widget.AppCompatRadioButton
        android:id="@+id/rbButt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_border_theme"
        android:text="@string/lbl_butt"
        android:textColor="@color/green_theme"
        android:textSize="@dimen/_16sp"
        android:textStyle="bold"
        android:layout_marginStart="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/ivBackGround"
        app:layout_constraintEnd_toEndOf="@+id/ivBackGround"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/ivBackGround"
        app:layout_constraintTop_toTopOf="@+id/ivBackGround"
        app:layout_constraintVertical_bias="0.658" />

    <androidx.appcompat.widget.AppCompatRadioButton
        android:id="@+id/rbThigh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_border_theme"
        android:text="@string/lbl_thigh"
        android:textColor="@color/green_theme"
        android:textSize="@dimen/_16sp"
        android:textStyle="bold"
        android:layout_marginEnd="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/ivBackGround"
        app:layout_constraintEnd_toEndOf="@+id/ivBackGround"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/ivBackGround"
        app:layout_constraintTop_toTopOf="@+id/ivBackGround"
        app:layout_constraintVertical_bias="0.902" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_32dp"
        android:layout_marginEnd="@dimen/_32dp"
        android:background="@color/colorTheme"
        android:text="@string/btn_next"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivBackGround" />

</androidx.constraintlayout.widget.ConstraintLayout>
